Update authentication error handling and refresh token logic in main application

--- a/views/index.templ
+++ b/views/index.templ
@@ -19,7 +19,7 @@ templ Counts(Count *Counter) {
 			<div id="counter">
 				@Conter(Count)
 			</div>
-			<button hx-target="#counter" hx-post="/count">add</button>
+			<button hx-target="#counter" hx-post="/count">refresh</button>
 		</body>
 	</html>
 }
