--- a/views/index.templ
+++ b/views/index.templ
@@ -1,10 +1,10 @@
 package views
 
-type Counter struct {
-	Count string
+type Manga struct {
+	Name string
 }
 
-templ Counts(Count *Counter) {
+templ Mangas(Manga *Manga) {
 	<html>
 		<head>
 			<meta charset="utf-8"/>
@@ -16,14 +16,14 @@ templ Counts(Count *Counter) {
 			<link rel="stylesheet" href=""/>
 		</head>
 		<body>
-			<div id="counter">
-				@Conter(Count)
+			<div id="Manga">
+				@Title(Manga)
 			</div>
-			<button hx-target="#counter" hx-post="/count">refresh</button>
+			<button hx-target="#Manga" hx-post="/search">refresh</button>
 		</body>
 	</html>
 }
 
-templ Conter(Count *Counter) {
-	Count :{ Count.Count }
+templ Title(Manga *Manga) {
+	Manga :{ Manga.Name }
 }
